--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  ul {
+    @apply pl-8 list-disc;
+  }
+
+  ol {
+    @apply pl-8 list-decimal;
+  }
+
+  code {
+    @apply bg-dark-900 p-1 rounded-md text-sm text-emerald-400;
+  }
+}
+
 @layer components {
   .sidebar-icon {
     @apply relative flex items-center justify-center
@@ -23,5 +37,14 @@
     @apply text-white placeholder-white placeholder-opacity-25
             border border-solid border-white border-opacity-50 overflow-x-auto
             rounded-xl mx-2 xs:mx-4 p-3 xs:p-4 bg-transparent w-64 xs:w-80;
+  }
+
+  .tiptap-editor {
+    @apply text-[rgba(256,256,256,0.8)];
+  }
+
+  .post-detail {
+    @apply mx-2 mb-4 text-[rgba(256,256,256,0.80)] [&_hr]:my-4 [&_p]:mt-0
+          [&_a]:text-blue-400 [&_h2]:text-2xl [&_h2]:py-2;
   }
 }
