--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,7 +49,7 @@
   }
 
   .post-card {
-    @apply px-1 xs:px-5 my-2 text-[rgba(256,256,256,0.75)] [&_hr]:my-4 [&_p]:mt-0
+    @apply text-[rgba(256,256,256,0.75)] [&_hr]:my-4 [&_p]:mt-0
           [&_a]:text-blue-400 [&_h2]:text-xl [&_h2]:py-2;
   }
 }
