--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,12 +36,12 @@
   }
 
   .post-detail {
-    @apply text-[rgba(256,256,256,0.80)] [&_hr]:my-4 [&_p]:mt-0
+    @apply text-white/75 [&_hr]:my-4 [&_p]:mt-0
           [&_a]:text-blue-400 [&_h2]:text-2xl [&_h2]:py-2;
   }
 
   .post-card {
-    @apply text-[rgba(256,256,256,0.75)] [&_hr]:my-4 [&_p]:mt-0
+    @apply text-white/75 [&_hr]:my-4 [&_p]:mt-0
           [&_a]:text-blue-400 [&_h2]:text-xl [&_h2]:py-2;
   }
 }
